# mdsasa-bolt

./: .gitignore  Cargo.toml  LICENSE  README.md  out.prof  pyproject.toml
.github/workflows/: python.yml
bench/: bench_mdakit.py  bench_rustsasa.py  compare.py  freesasa_radii.txt  new_sasa_results.txt  old_sasa_results.txt  rustsasa_results.txt  test_new.py  test_old.py  utils.py
bench/results/: bench_md_mdakit.json  bench_md_rustsasa.json
mdsasa_bolt/: analysis.py  inference.py
mdsasa_bolt/mdsasa_bolt/: analysis.py
src/: lib.py  lib.rs  simd.rs
tests/: NOTE.md
tests/analysis/: test_sasaanalysis.py
tests/data/: .cobrotoxin.trr_offsets.npz
