[package]
name = "plumber"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "plumber"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.33.2"
pulp = "0.22.2"
pyo3 = "0.25.0"
rayon = "1.10.0"
rust-sasa = "0.8.0"
